[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/card_battle/card_3d.gd" id="1"]

[sub_resource type="BoxMesh" id="BoxMesh_card"]
size = Vector3(0.65, 0.02, 0.9)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_card"]
albedo_color = Color(0.95, 0.92, 0.85, 1)
metallic_specular = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_card"]
size = Vector3(0.65, 0.05, 0.9)

[node name="Card3D" type="Node3D"]
script = ExtResource("1")

[node name="CardMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_card")
surface_material_override/0 = SubResource("StandardMaterial3D_card")

[node name="Area3D" type="Area3D" parent="."]
input_ray_pickable = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_card")

[node name="CostLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.25, 0.02, -0.35)
pixel_size = 0.005
text = "0"
font_size = 32
outline_size = 8
modulate = Color(0.2, 0.5, 1, 1)

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.02, 0.1)
pixel_size = 0.004
text = "Card Name"
font_size = 24
outline_size = 6

[node name="DescLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.02, 0.25)
pixel_size = 0.003
text = ""
font_size = 18
outline_size = 4
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="AttackLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.25, 0.02, 0.35)
pixel_size = 0.005
text = "0"
font_size = 28
outline_size = 8
modulate = Color(1, 0.8, 0.2, 1)

[node name="HealthLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.25, 0.02, 0.35)
pixel_size = 0.005
text = "0"
font_size = 28
outline_size = 8
modulate = Color(1, 0.2, 0.2, 1)
